test/banana/typeck/should_fail/component_cant_be_in_object.banana
c = IptablesIngestor()
a = { b: c }
# TODO(Joan): rename Comp to Components
# RAISE BananaAssignCompError